--- a/src/app/pages/add-tours/add-tours.component.html
+++ b/src/app/pages/add-tours/add-tours.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <div class="container">
+    <div class="container mt-3">
         <div class="row mb-3">
             <div class="col d-flex justify-content-between align-items-center">
                 <h2>Thêm tour mới</h2>
