--- a/src/app/pages/role/role.component.html
+++ b/src/app/pages/role/role.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <div class="container">
+    <div class="container mb-3">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2 class="mt-3">Danh sách vai trò</h2>
             <button class="btn btn-success" (click)="navigateToAddRole()">Thêm mới</button>
