--- a/src/app/pages/account/account.component.html
+++ b/src/app/pages/account/account.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <div class="container ">
+    <div class="container mb-3">
       <div class="mt-3 d-flex justify-content-between align-items-center mb-3">
         <h2>Danh sách tài khoản</h2>
         <button class="btn btn-success" (click)="navigateToAddAccount()">Thêm mới</button>
@@ -31,9 +31,8 @@
         </tbody>
       </table>
 
-      <ngx-paginator class="mb-3" [apiUrl]="apiUrl" [current_page]="currentPage" [last_page]="lastPage"
+      <ngx-paginator [apiUrl]="apiUrl" [current_page]="currentPage" [last_page]="lastPage"
           (dataList)="onDataListChange($event)">
       </ngx-paginator>
-
     </div>
   </nb-card>
