--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <div class="container">
+    <div class="container mb-3 mt-3">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Danh sách khách hàng</h2>
             <button class="btn btn-success" (click)="navigateToAddCustomers()">Thêm mới</button>
