--- a/src/app/pages/tours/tours.component.html
+++ b/src/app/pages/tours/tours.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <div class="container">
+    <div class="container mb-3">
       <div class="mt-3 d-flex justify-content-between align-items-center mb-3">
         <h2>Danh sách quản lí chuyến đi</h2>
         <button class="btn btn-success" (click)="navigateToAddTour()">Thêm mới</button>
